# QuantumAI-Assistant

./: .gitignore  README 2.md  README-Upgrade.md  README.md  app.py  bloch.html  fetch_and_split.py  hybrid_index.py  merge_parts.py  pyproject.toml  run_mac.sh  run_win.bat
data/: base_knowledge.jsonl  growth.json  memory.jsonl  persona.json  stopwords.txt
web/static/: script.js  style.css
web/templates/: chat.html
